--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-      <h1>This is s starterkit template</h1>
+      <h1>This is a starterkit template</h1>
 
 
 <!-- JAVA SCRIPT -->
